// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reportback Item basic snapshot test 1`] = `
<Figure
  alt="A Doer's photo"
  className="reportback-item"
  image={null}
  imageClassName={null}
>
  <BaseFigure
    alignment="right"
    className="padded"
    media={null}
    size={null}
    verticalAlignment={null}
  >
    <h4>
      A Doer
    </h4>
  </BaseFigure>
</Figure>
`;

exports[`Reportback Item snapshot test 1`] = `
<Figure
  alt="Luke Skywalker's photo"
  className="reportback-item"
  image="https://static1.comicvine.com/uploads/original/11118/111184078/5124660-6531264806-22292.jpg"
  imageClassName={null}
>
  <BaseFigure
    alignment="right"
    className="padded"
    media={
      <Reaction
        active={true}
        onToggleOff={[Function]}
        onToggleOn={[Function]}
        total={30}
      />
    }
    size={null}
    verticalAlignment={null}
  >
    <h4>
      Luke Skywalker
    </h4>
    <p
      className="footnote"
    >
      20
       
      lightsabers
    </p>
    <p>
      Some awesmome caption
    </p>
  </BaseFigure>
</Figure>
`;
